Fixing? the slideshow text overflow issues with unlucky titles @robindemourat I am so sorry for this CSS rule...

--- a/site/assets/scss/pages/index/slideshow/_slideshow-desktop.scss
+++ b/site/assets/scss/pages/index/slideshow/_slideshow-desktop.scss
@@ -122,6 +122,13 @@
                 &::first-letter {
                   text-transform: capitalize;
                 }
+
+                max-height: 23%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
               }
 
               .more {
